# fastapi_with_auth

./: .gitignore  README.md  pyproject.toml
fastapi_with_auth/: auth_config.py  main.py
server/: main.py  models.py
server/auth_modules/: base_auth_module.py  firebase_auth_module.py
server/protected/: user.py
server/public/: access.py
